Safari.safariextension/style.css
/* This ahem, liberal use of !important is due to the backwards way Safari prioritises user stylesheets
https://developer.apple.com/library/safari/documentation/Tools/Conceptual/SafariExtensionGuide/AddingStyles/AddingStyles.html */

article {
    font-family: verdana, sans-serif !important;
    word-wrap:break-word !important;
    break-word: all !important;
    padding-left: 20px !important;
}

.comment {
    padding-top: 10px !important;
    padding-bottom: 5px !important;
}

article span a {
    font-weight: bold !important;
}

sup {
    color: #979797 !important;
    font-size: 11px !important;
}

article span {
    color: #888888 !important;
    font-size: 10px !important;
}

article span .upvotes {
    color: #ff8b24 !important;
    font-weight: bold !important;
}

article span .downvotes {
    color: #9494ff !important;
    font-weight: bold !important;
}

.replies article {
    border-left: dotted 1px #cacaca !important;
}


.md blockquote {
    border-left: 2px solid rgb(51, 102, 153) !important;
    margin-bottom: 5px !important;
    margin-left: 5px !important;
    margin-right: 15px !important;
    margin-top: 5px !important;
    padding-left: 4px !important;
}

.md p {
    margin-top: 8px !important;
    margin-bottom: 5px !important;
}

#reddit {
    margin-top: 40px !important;
    padding-bottom: 40px !important;
    width: 628px !important;
    padding-right: 20px !important;
    box-sizing: border-box !important;
}

article a {
    color: #336699 !important;
    text-decoration: none !important;
}

article a:hover {
    text-decoration: underline !important;
}

.redditTab {
    font-family: verdana, sans-serif !important;
    padding-left: 10px !important;
    padding-right: 10px !important;
    margin: 0 !important;
    margin-bottom: -1px !important;
    height: 32px !important;
    background-color: #f8f8f8 !important;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%) !important;
    vertical-align: middle !important;
    overflow: hidden !important;
    font-size: 12px !important;
    text-shadow: 0 1px 0 rgba(255,255,255,.5) !important;
    border: 1px solid #d3d3d3 !important;
    border-left: none !important;
    color: #333 !important;
}

.redditTab:focus {
    outline: 0;
}

.redditTab.active {
    background-color: #fff !important;
    border: 1px solid #c6c6c6 !important;
    border-bottom: 1px solid #fff !important;
    box-shadow: inset 0 1px 0 #ddd !important;
    background-image: none !important;
}

.redditTab.border {
    border-left: 1px solid #d3d3d3 !important;
}

.redditTab .active:hover {
    border-bottom: 1px solid #fff;
}

.redditTab:hover {
    border: 1px solid #9c9c9c !important;
}

#redditTabs {
    padding-left: 20px !important;
    border-bottom: 1px solid #d3d3d3 !important;
}

.flair {
    display: inline-block !important;
    margin-right: .5em !important;
    padding: 0 2px !important;
    background: #f5f5f5 !important;
    color: #555 !important;
    border: 1px solid #ddd !important;
    border-radius: 2px !important;
}

.collapse {
    font-family: verdana, sans-serif !important;
    font-size: 10px !important;
    padding-left: 20px !important;
    display: none !important;
    color: gray !important;
    font-style: italic !important;
    padding-top: 10px !important;
    padding-bottom: 5px !important;
}

.collapse a {
    font-weight: bold !important;
    color: gray !important;
}

.collapse a:hover {
    text-decoration: none !important;
}

.expandButton {
    font-style: normal !important;
}

.expandButton:hover,
.collapseButton:hover {
    text-decoration: underline !important;
}
.redditSpinner {
    position: relative !important;
    width: 30px !important;
    height:30px !important;
    margin-top: 75px !important;
    margin-left: calc(50% - 60px) !important;
}

.redditSpinner .loading {
    margin-left: 60px !important;
    font-size: 120% !important;
    color: #777777 !important;
    line-height: 30px !important;
}

.redditSpinner .wBall {
    position: absolute !important;
    width: 29px !important;
    height: 29px !important;
    opacity: 0;
    -moz-transform: rotate(225deg);
    -moz-animation: orbit 4.95s infinite;
    -webkit-transform: rotate(225deg);
    -webkit-animation: orbit 4.95s infinite;
    transform: rotate(225deg);
    animation: orbit 4.95s infinite;
}

.redditSpinner .wBall .wInnerBall{
    position: absolute !important;
    width: 4px !important;
    height: 4px !important;
    background: #FF5900 !important;
    background-color: #FF5900 !important;
    left:0px !important;
    top:0px !important;
    -moz-border-radius: 4px !important;
    -webkit-border-radius: 4px !important;
    border-radius: 4px !important;
}

.redditSpinner #wBall_1 {
    -moz-animation-delay: 1.08s;
    -webkit-animation-delay: 1.08s;
    animation-delay: 1.08s;
}

.redditSpinner #wBall_2 {
    -moz-animation-delay: 0.22s;
    -webkit-animation-delay: 0.22s;
    animation-delay: 0.22s;
}

.redditSpinner #wBall_3 {
    -moz-animation-delay: 0.43s;
    -webkit-animation-delay: 0.43s;
    animation-delay: 0.43s;
}

.redditSpinner #wBall_4 {
    -moz-animation-delay: 0.65s;
    -webkit-animation-delay: 0.65s;
    animation-delay: 0.65s;
}

.redditSpinner #wBall_5 {
    -moz-animation-delay: 0.86s;
    -webkit-animation-delay: 0.86s;
    animation-delay: 0.86s;
}

@-moz-keyframes orbit {
    0% {
        opacity: 1;
        z-index:99;
        -moz-transform: rotate(180deg);
        -moz-animation-timing-function: ease-out;
    }
    
    7% {
        opacity: 1;
        -moz-transform: rotate(300deg);
        -moz-animation-timing-function: linear;
        -moz-origin:0%;
    }
    
    30% {
        opacity: 1;
        -moz-transform:rotate(410deg);
        -moz-animation-timing-function: ease-in-out;
        -moz-origin:7%;
    }
    
    39% {
        opacity: 1;
        -moz-transform: rotate(645deg);
        -moz-animation-timing-function: linear;
        -moz-origin:30%;
    }
    
    70% {
        opacity: 1;
        -moz-transform: rotate(770deg);
        -moz-animation-timing-function: ease-out;
        -moz-origin:39%;
    }
    
    75% {
        opacity: 1;
        -moz-transform: rotate(900deg);
        -moz-animation-timing-function: ease-out;
        -moz-origin:70%;
    }
    
    76% {
        opacity: 0;
        -moz-transform:rotate(900deg);
    }
    
    100% {
        opacity: 0;
        -moz-transform: rotate(900deg);
    }
    
}

@-webkit-keyframes orbit {
    0% {
        opacity: 1;
        z-index:99;
        -webkit-transform: rotate(180deg);
        -webkit-animation-timing-function: ease-out;
    }
    
    7% {
        opacity: 1;
        -webkit-transform: rotate(300deg);
        -webkit-animation-timing-function: linear;
        -webkit-origin:0%;
    }
    
    30% {
        opacity: 1;
        -webkit-transform:rotate(410deg);
        -webkit-animation-timing-function: ease-in-out;
        -webkit-origin:7%;
    }
    
    39% {
        opacity: 1;
        -webkit-transform: rotate(645deg);
        -webkit-animation-timing-function: linear;
        -webkit-origin:30%;
    }
    
    70% {
        opacity: 1;
        -webkit-transform: rotate(770deg);
        -webkit-animation-timing-function: ease-out;
        -webkit-origin:39%;
    }
    
    75% {
        opacity: 1;
        -webkit-transform: rotate(900deg);
        -webkit-animation-timing-function: ease-out;
        -webkit-origin:70%;
    }
    
    76% {
        opacity: 0;
        -webkit-transform:rotate(900deg);
    }
    
    100% {
        opacity: 0;
        -webkit-transform: rotate(900deg) ;
    }
    
}

@keyframes orbit {
    0% {
        opacity: 1;
        z-index:99;
        transform: rotate(180deg);
        animation-timing-function: ease-out;
    }
    
    7% {
        opacity: 1;
        transform: rotate(300deg);
        animation-timing-function: linear;
        origin:0%;
    }
    
    30% {
        opacity: 1;
        transform:rotate(410deg);
        animation-timing-function: ease-in-out;
        origin:7%;
    }
    
    39% {
        opacity: 1;
        transform: rotate(645deg);
        animation-timing-function: linear;
        origin:30%;
    }
    
    70% {
        opacity: 1;
        transform: rotate(770deg);
        animation-timing-function: ease-out;
        origin:39%;
    }
    
    75% {
        opacity: 1;
        transform: rotate(900deg);
        animation-timing-function: ease-out;
        origin:70%;
    }
    
    76% {
        opacity: 0;
        transform:rotate(900deg);
    }
    
    100% {
        opacity: 0;
        transform: rotate(900deg);
    }
    
}

